--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -107,14 +107,13 @@ h2 {
     height: 350px;
     overflow-y: auto;
     background-color: white;
+    margin: 0;
+    height: fit-content;
 }
 
 .carousel-item img {
-    /*width: 100%;*/
     height: 400px;
-    /* Ajusta la altura según tus necesidades */
     object-fit: cover;
-    /* Escalar la imagen para que siempre ocupe todo el contenedor */
     border-radius: 10px;
 }
 
@@ -124,7 +123,6 @@ h2 {
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    margin-top: 10px;
 }
 
 #text-logo {
