--- a/public_html/css/productoDetalle.css
+++ b/public_html/css/productoDetalle.css
@@ -19,7 +19,7 @@ body {
     padding-top: 20px;
     background-color: rgb(247, 237, 223);
     background-image: url('../img/backGrounds/madrid.jpg');
-    /* Color de fondo */
+    display: flex;
 }
 
 hr {
@@ -48,11 +48,15 @@ hr {
         rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
         rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     transition: transform 0.5s ease;
+    width: 60%;
+
+    align-items: center;
+    justify-content: center;
 }
 
 .carousel-inner {
-    width: 80%;
-    margin-left: 10%;
+    width: 90%;
+    margin-left: 5%;
 }
 
 .carousel-item img {
@@ -61,22 +65,19 @@ hr {
     border-radius: 10px;
 }
 
-.container {
-    width: 60%;
-    margin-left: 20%;
-}
+
 
 .carousel-control-prev,
 .carousel-control-next {
     width: 5%;
     border: 0;
-    background-color: #00000000;
-    color: #ffffff;
+    background-color: #ffffff00;
     margin: 10px;
 }
 
 .arrow {
     font-size: 40px;
+    color: #00ff00;
 }
 
 .nombre {
@@ -132,20 +133,21 @@ strong {
 
 
 @media (max-width: 960px) {
+
     .container {
         width: 90%;
-        margin-left: 5%;
+        margin-bottom: 20px;
     }
 
     .carousel-inner {
         width: 95%;
         margin-left: 2.5%;
-        height: 200px;
+        height: fit-content;
     }
 
     .carousel-item img {
         max-width: 100%;
-        height: 200px;
+        height: fit-content;
         border-radius: 10px;
     }
 }
