--- a/public_html/css/nav-categories.css
+++ b/public_html/css/nav-categories.css
@@ -54,9 +54,34 @@ a {
     align-items: center;
 }
 
+#icon-category {
+    margin: 0;
+}
+
+#btn-collapse-categorias {
+    position: fixed;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #eee8e8d4;
+    width: 100px;
+    height: fit-content;
+    padding: 10px;
+    border: 1px solid #000000;
+    z-index: 2;
+    justify-content: center;
+    color: #000000;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+}
+
+
 @media (min-width: 250px) {
     .nav-inferior {
-        top: 80%;
+        top: 70%;
         width: 75%;
         transform: translate(-50%, -50%);
     }
@@ -68,7 +93,7 @@ a {
 
 @media (min-width: 575px) {
     .nav-inferior {
-        top: 80%;
+        top: 70%;
         width: 75%;
         transform: translate(-50%, -50%);
     }
@@ -80,7 +105,7 @@ a {
 
 @media (min-width: 766px) {
     .nav-inferior {
-        top: 80%;
+        top: 70%;
         width: 75%;
         transform: translate(-50%, -50%);
     }
@@ -93,7 +118,7 @@ a {
 
 @media (min-width: 972px) {
     .nav-inferior {
-        top: 80%;
+        top: 70%;
         width: 75%;
         transform: translate(-50%, -50%);
     }
@@ -126,23 +151,4 @@ a {
     #btn-collapse-categorias {
         display: none;
     }
-}
-
-#btn-collapse-categorias {
-    position: fixed;
-    top: 90%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #eee8e8d4;
-    padding: 10px;
-    border: 1px solid #000000;
-    z-index: 2;
-    justify-content: center;
-    color: #000000;
-    width: fit-content;
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
 }
