--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -9,7 +9,7 @@
 
 
 body {
-    background-image: url('../img/backGrounds/madrid.jpg');
+    background-image: url('../img/backGrounds/madrid-transformed.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -66,10 +66,6 @@ h2 {
     margin: 0;
 }
 
-.bold-text:hover {
-    color: black;
-}
-
 .nav-link {
     color: white;
     font-size: 40px;
@@ -109,6 +105,7 @@ h2 {
     background-color: white;
     margin: 0;
     height: fit-content;
+    text-align: center;
 }
 
 .carousel-item img {
@@ -123,6 +120,18 @@ h2 {
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
+}
+
+.seccion a {
+    text-decoration: none;
+}
+
+.seccion a:hover {
+    cursor: pointer;
+}
+
+.seccion .bold-text:hover {
+    color: black;
 }
 
 #text-logo {
@@ -173,7 +182,8 @@ h2 {
     }
 
     body {
-        background-image: url('../img/backGrounds/fondo-papel.jpg');
+        background-image: url('../img/backGrounds/madrid-transformed-movil.jpeg');
+        background-position: center;
     }
 
     main {
